--- a/varnish/deploy.yml
+++ b/varnish/deploy.yml
@@ -23,18 +23,19 @@ spec:
         - name: VCL_CONFIG
           value: "/etc/varnish/default.vcl"
         - name: CACHE_SIZE
-          value: "64m"
+          value: "500m"
         - name: VARNISHD_PARAMS
           value: "-p default_ttl=3600 -p default_grace=3600"
+          # value: "-p default_ttl=3600 -p default_grace=3600"
         volumeMounts:
         - name: current-config
           mountPath: /etc/varnish/default.vcl
           subPath: default.vcl
         resources:
           requests:
-            memory: "64Mi"
+            memory: "500Mi"
           limits:
-            memory: "100Mi"
+            memory: "600Mi"
       volumes:
       - name: varnish
         glusterfs:
