--- a/monitoring/prometheus/deploy.yml
+++ b/monitoring/prometheus/deploy.yml
@@ -1,8 +1,11 @@
+---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: prometheus
   namespace: monitoring
+  labels:
+    app: prometheus
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
@@ -11,60 +14,47 @@ metadata:
   namespace: monitoring
   labels:
     app: prometheus
-    component: core
 spec:
   replicas: 1
-  strategy:
-    rollingUpdate:
-      maxSurge: 0
-      maxUnavailable: 1
-    type: RollingUpdate
-  selector:
-    matchLabels:
-      app: prometheus
   template:
     metadata:
-      name: prometheus
       labels:
         app: prometheus
-        component: core
     spec:
       serviceAccountName: prometheus
       containers:
       - name: prometheus
-        # image: prom/prometheus:v1.7.0
-        image: prom/prometheus
+        image: "prom/prometheus"
+        imagePullPolicy: "Always"
         args:
-          # - '-storage.local.retention=24h'
-          # - '-storage.local.series-file-shrink-ratio=0.3'
-          - '-storage.local.retention=360h'
-          - '-storage.local.memory-chunks=1048576'
-          - '-config.file=/etc/prometheus/prometheus.yaml'
-          - '-alertmanager.url=http://alertmanager:9093/alertmanager'
+        - '--config.file=/etc/config/prometheus.yml'
+        - '--storage.tsdb.path=/data'
+        - '--web.console.libraries=/etc/prometheus/console_libraries'
+        - '--web.console.templates=/etc/prometheus/consoles'
+        - '--web.enable-lifecycle'
         ports:
-        - name: webui
+        - name: http
           containerPort: 9090
-#         resources:
-#           requests:
-#             cpu: 100m
-#             memory: 100M
-#           limits:
-#             cpu: 500m
-#             memory: 2500M
+        readinessProbe:
+          httpGet:
+            path: /-/ready
+            port: 9090
+          initialDelaySeconds: 30
+          timeoutSeconds: 30
+        livenessProbe:
+          httpGet:
+            path: /-/healthy
+            port: 9090
+          initialDelaySeconds: 30
+          timeoutSeconds: 30
         volumeMounts:
         - name: config-volume
-          mountPath: /etc/prometheus
-        - name: rules-volume
-          mountPath: /etc/prometheus-rules
-        - name: prometheus-data
-          mountPath: /prometheus
+          mountPath: /etc/config
+        - name: storage-volume
+          mountPath: /data
       volumes:
       - name: config-volume
         configMap:
-          name: prometheus-core
-      - name: rules-volume
-        configMap:
-          name: prometheus-rules
-      - name: prometheus-data
-        persistentVolumeClaim:
-          claimName: prometheus-data
+          name: config-prometheus
+      - name: storage-volume
+        emptyDir: {}
