--- a/monitoring/prometheus/service.yml
+++ b/monitoring/prometheus/service.yml
@@ -2,18 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: prometheus
-  namespace: monitoring
   labels:
     app: prometheus
-    component: core
-  annotations:
-    prometheus.io/scrape: 'true'
 spec:
-  type: NodePort
   ports:
-    - port: 9090
-      protocol: TCP
-      name: webui
+    - name: http
+      port: 9090
   selector:
     app: prometheus
-    component: core
