--- a/calibre/ingress.yml
+++ b/calibre/ingress.yml
@@ -8,7 +8,7 @@ metadata:
     traefik.backend.loadbalancer.stickey: "true"
 spec:
   rules:
-  - host: book.leangeder.eu
+  - host: tmp.leangeder.eu
     http:
       paths:
       - path: /
