--- a/lb/service.yml
+++ b/lb/service.yml
@@ -1,35 +1,3 @@
-# ---
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: traefik
-#   namespace: kube-system
-#   labels:
-#     k8s-app: traefik-ingress-lb
-# spec:
-#   ports:
-#   - port: 80
-#     name: http
-#   - port: 443
-#     name: https
-#   externalIPs:
-#   - 62.210.14.17
-#   selector:
-#     k8s-app: traefik-ingress-lb
-# ---
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: traefik-console
-#   namespace: kube-system
-#   labels:
-#     k8s-app: traefik-ingress-lb
-# spec:
-#   selector:
-#     k8s-app: traefik-ingress-lb
-#   ports:
-#   - port: 8080
-#     name: webui
 ---
 apiVersion: v1
 kind: Service
@@ -40,10 +8,12 @@ metadata:
     k8s-app: traefik-ingress-lb
 spec:
   ports:
-  - name: http
-    port: 80
-  - name: https
-    port: 443
+  - port: 80
+    name: http
+  - port: 443
+    name: https
+  externalIPs:
+  - 62.210.14.17
   selector:
     k8s-app: traefik-ingress-lb
 ---
@@ -55,8 +25,38 @@ metadata:
   labels:
     k8s-app: traefik-ingress-lb
 spec:
-  ports:
-  - name: webui
-    port: 8080
   selector:
     k8s-app: traefik-ingress-lb
+  ports:
+  - port: 8080
+    name: webui
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: traefik
+#   namespace: kube-system
+#   labels:
+#     k8s-app: traefik-ingress-lb
+# spec:
+#   ports:
+#   - name: http
+#     port: 80
+#   - name: https
+#     port: 443
+#   selector:
+#     k8s-app: traefik-ingress-lb
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: traefik-console
+#   namespace: kube-system
+#   labels:
+#     k8s-app: traefik-ingress-lb
+# spec:
+#   ports:
+#   - name: webui
+#     port: 8080
+#   selector:
+#     k8s-app: traefik-ingress-lb
