--- a/monitoring/alertmanager/deploy.yml
+++ b/monitoring/alertmanager/deploy.yml
@@ -1,3 +1,12 @@
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: alertmanager
+  namespace: monitoring
+  labels:
+    app: alertmanager
+---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -7,37 +16,36 @@ metadata:
     app: alertmanager
 spec:
   replicas: 1
-  selector:
-    matchLabels:
-      app: alertmanager
   template:
     metadata:
-      name: alertmanager
       labels:
         app: alertmanager
     spec:
+      serviceAccountName: alertmanager
       containers:
       - name: alertmanager
-        image: quay.io/prometheus/alertmanager:v0.7.1
+        image: "prom/alertmanager"
         args:
-          - '-config.file=/etc/alertmanager/config.yml'
-          - '-storage.path=/alertmanager'
+        - --config.file=/etc/config/alertmanager.yml
+        - --storage.path=/data
         ports:
-        - name: alertmanager
+        - name: http
           containerPort: 9093
+        readinessProbe:
+          httpGet:
+            path: /#/status
+            port: 9093
+          initialDelaySeconds: 30
+          timeoutSeconds: 30
         volumeMounts:
         - name: config-volume
-          mountPath: /etc/alertmanager
-        - name: templates-volume
-          mountPath: /etc/alertmanager-templates
-        - name: alertmanager
-          mountPath: /alertmanager
+          mountPath: /etc/config
+        - name: storage-volume
+          mountPath: "/data"
+          subPath: "/data"
       volumes:
       - name: config-volume
         configMap:
-          name: alertmanager
-      - name: templates-volume
-        configMap:
-          name: alertmanager-templates
-      - name: alertmanager
+          name: config-alertmanager
+      - name: storage-volume
         emptyDir: {}
