--- a/nginx/ingress.yml
+++ b/nginx/ingress.yml
@@ -8,7 +8,7 @@ metadata:
     traefik.backend.loadbalancer.stickey: "true"
 spec:
   rules:
-  - host: nzb.leangeder.eu
+  - host: file.leangeder.eu
     http:
       paths:
       - path: /
