--- a/calibre/ingress.yml
+++ b/calibre/ingress.yml
@@ -6,12 +6,14 @@ metadata:
     kubernetes.io/ingress.class: "traefik"
     traefik.frontend.passHostHeader: "true"
     traefik.backend.loadbalancer.stickey: "true"
+    # traefik.ingress.kubernetes.io/rewrite-target: "/"
 spec:
   rules:
   - host: file.leangeder.eu
     http:
       paths:
-      - path: /Books
+      - path: /Books/
+      # - path: /
         backend:
           serviceName: calibre
           servicePort: http
