--- a/lb/service.yml
+++ b/lb/service.yml
@@ -1,3 +1,21 @@
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: traefik
+#   namespace: kube-system
+#   labels:
+#     k8s-app: traefik-ingress-lb
+# spec:
+#   ports:
+#   - port: 80
+#     name: http
+#   - port: 443
+#     name: https
+#   externalIPs:
+#   - 62.210.14.17
+#   selector:
+#     k8s-app: traefik-ingress-lb
 ---
 apiVersion: v1
 kind: Service
@@ -8,12 +26,10 @@ metadata:
     k8s-app: traefik-ingress-lb
 spec:
   ports:
-  - port: 80
-    name: http
-  - port: 443
-    name: https
-  externalIPs:
-  - 62.210.14.17
+  - name: http
+    port: 80
+  - name: https
+    port: 443
   selector:
     k8s-app: traefik-ingress-lb
 ---
@@ -25,38 +41,8 @@ metadata:
   labels:
     k8s-app: traefik-ingress-lb
 spec:
+  ports:
+  - name: webui
+    port: 8080
   selector:
     k8s-app: traefik-ingress-lb
-  ports:
-  - port: 8080
-    name: webui
-# ---
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: traefik
-#   namespace: kube-system
-#   labels:
-#     k8s-app: traefik-ingress-lb
-# spec:
-#   ports:
-#   - name: http
-#     port: 80
-#   - name: https
-#     port: 443
-#   selector:
-#     k8s-app: traefik-ingress-lb
-# ---
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: traefik-console
-#   namespace: kube-system
-#   labels:
-#     k8s-app: traefik-ingress-lb
-# spec:
-#   ports:
-#   - name: webui
-#     port: 8080
-#   selector:
-#     k8s-app: traefik-ingress-lb
