--- a/monitoring/alertmanager/deploy.yml
+++ b/monitoring/alertmanager/deploy.yml
@@ -1,12 +1,3 @@
----
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: alertmanager
-  namespace: monitoring
-  labels:
-    app: alertmanager
----
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -16,36 +7,37 @@ metadata:
     app: alertmanager
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: alertmanager
   template:
     metadata:
+      name: alertmanager
       labels:
         app: alertmanager
     spec:
-      serviceAccountName: alertmanager
       containers:
       - name: alertmanager
-        image: "prom/alertmanager"
+        image: quay.io/prometheus/alertmanager:v0.7.1
         args:
-        - --config.file=/etc/config/alertmanager.yml
-        - --storage.path=/data
+          - '-config.file=/etc/alertmanager/config.yml'
+          - '-storage.path=/alertmanager'
         ports:
-        - name: http
+        - name: alertmanager
           containerPort: 9093
-        readinessProbe:
-          httpGet:
-            path: /#/status
-            port: 9093
-          initialDelaySeconds: 30
-          timeoutSeconds: 30
         volumeMounts:
         - name: config-volume
-          mountPath: /etc/config
-        - name: storage-volume
-          mountPath: "/data"
-          subPath: "/data"
+          mountPath: /etc/alertmanager
+        - name: templates-volume
+          mountPath: /etc/alertmanager-templates
+        - name: alertmanager
+          mountPath: /alertmanager
       volumes:
       - name: config-volume
         configMap:
-          name: config-alertmanager
-      - name: storage-volume
+          name: alertmanager
+      - name: templates-volume
+        configMap:
+          name: alertmanager-templates
+      - name: alertmanager
         emptyDir: {}
