--- a/monitoring/alertmanager/service.yml
+++ b/monitoring/alertmanager/service.yml
@@ -1,18 +1,19 @@
 apiVersion: v1
 kind: Service
-metadata:
   name: alertmanager
+  namespace: monitoring
+metadata:
   labels:
-    app: alertmanager
+    name: alertmanager
+  annotations:
+    prometheus.io/scrape: 'true'
+    prometheus.io/path: '/metrics'
 spec:
+  type: NodePort
   ports:
-  - name: http
+  - name: alertmanager
+    protocol: TCP
     port: 9093
-    protocol: TCP
     targetPort: 9093
-  - name: meshpeer
-    port: 6783
-    protocol: TCP
-    targetPort: 6783
   selector:
     app: alertmanager
