--- a/monitoring/prometheus/service.yml
+++ b/monitoring/prometheus/service.yml
@@ -2,11 +2,18 @@ apiVersion: v1
 kind: Service
 metadata:
   name: prometheus
+  namespace: monitoring
   labels:
     app: prometheus
+    component: core
+  annotations:
+    prometheus.io/scrape: 'true'
 spec:
+  type: NodePort
   ports:
-    - name: http
-      port: 9090
+    - port: 9090
+      protocol: TCP
+      name: webui
   selector:
     app: prometheus
+    component: core
