--- a/wallabag/ingress.yml
+++ b/wallabag/ingress.yml
@@ -4,8 +4,8 @@ metadata:
   name: wallabag
   annotations:
     kubernetes.io/ingress.class: "traefik"
-    traefik.frontend.passHostHeader: "true"
-    traefik.backend.loadbalancer.stickey: "true"
+    # traefik.frontend.passHostHeader: "true"
+    # traefik.backend.loadbalancer.stickey: "true"
 spec:
   rules:
   - host: wallabag.leangeder.eu
