--- a/nginx/config.yml
+++ b/nginx/config.yml
@@ -2,7 +2,49 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: nginx
+  name: config.general.nginx
 data:
-  webdav.conf: |
-    
+  default: |
+    server {
+      listen       80 default_server;
+       #listen       [::]:80 default_server;
+
+      server_name _;
+      root /usr/share/nginx/html;
+      index index.html index.htm index.nginx-debian.html;
+
+      # location / {
+      #   try_files $uri $uri/ =404;
+      # }
+
+      location / {
+          root   /usr/share/nginx/html;
+          # index  index.html index.htm;
+          autoindex on;
+      }
+
+      error_page   500 502 503 504  /50x.html;
+      location = /50x.html {
+          root   /usr/share/nginx/html;
+      }
+      
+      #this is an example of a password restricted repository
+      location ^~ /Music/ {
+        root   /usr/share/nginx/html;
+        client_body_temp_path /temp;
+        dav_methods     PUT DELETE MKCOL COPY MOVE;
+        dav_ext_methods   PROPFIND OPTIONS;
+        create_full_put_path  on;
+        dav_access    user:rw group:rw all:rw;
+        autoindex     on;
+        auth_basic "restricted";
+        auth_basic_user_file /etc/nginx/htpasswd;
+      }
+    }
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: secret.general.nginx
+data:
+  htpasswd: "bGVhbmdlZGVyOklSYWFlQ1IwcFhuZ28K"
