--- a/nginx/deploy.yml
+++ b/nginx/deploy.yml
@@ -13,25 +13,35 @@ spec:
       - name: nginx
         image: nginx
         imagePullPolicy: Always
-        lifecycle:
-          postStart:
-            exec:
-              command:
-              - "/bin/bash"
-              - "-c"
-              - >
-                groupmod -g 1000 nginx;
-                usermod -u 1000 -g 1000 nginx;
-                sed -i '/index.html/a \ \ \ \ \ autoindex on;' /etc/nginx/conf.d/default.conf;
-                nginx -s reload;
-                # sed -i '/index.html/a \ \ \ \ \ client_body_temp_path /temp;' /etc/nginx/conf.d/default.conf;
-                # sed -i '/index.html/a \ \ \ \ \ dav_methods PUT DELETE MKCOL COPY MOVE;' /etc/nginx/conf.d/default.conf;
-                # sed -i '/index.html/a \ \ \ \ \ dav_ext_methods PROFIND OPTIONS;' /etc/nginx/conf.d/default.conf;
-                # sed -i '/index.html/a \ \ \ \ \ create_full_put_path on;' /etc/nginx/conf.d/default.conf;
-                # sed -i '/index.html/a \ \ \ \ \ dav_access user:rw group:rw all:rw;' /etc/nginx/conf.d/default.conf;
-                # sed -i '/index.html/a \ \ \ \ \ try_files $uri $uri/ /index.html;' /etc/nginx/conf.d/default.conf;
-                # sed -i '/index.html/a \ \ \ \ \ auth_basic: "Mot de passe :";' /etc/nginx/conf.d/default.conf;
-                # sed -i '/index.html/a \ \ \ \ \ auth_basic_user_file "/etc/nginx/passwd/media_pass";' /etc/nginx/conf.d/default.conf;
+        command:
+        - "/bin/bash"
+        - "-c"
+        - >
+          apt-get update;
+          apt-get install nginx-extras -y;
+          groupmod -g 1000 nginx;
+          usermod -u 1000 -g 1000 nginx;
+          nginx -g 'daemon off;';
+        # lifecycle:
+        #   postStart:
+        #     exec:
+        #       command:
+        #       - "/bin/bash"
+        #       - "-c"
+        #       - >
+        #         apk -U add nginx-extras;
+        #         groupmod -g 1000 nginx;
+        #         usermod -u 1000 -g 1000 nginx;
+        #         sed -i '/index.html/a \ \ \ \ \ autoindex on;' /etc/nginx/conf.d/default.conf;
+        #         nginx -s reload;
+        #         # sed -i '/index.html/a \ \ \ \ \ client_body_temp_path /temp;' /etc/nginx/conf.d/default.conf;
+        #         # sed -i '/index.html/a \ \ \ \ \ dav_methods PUT DELETE MKCOL COPY MOVE;' /etc/nginx/conf.d/default.conf;
+        #         # sed -i '/index.html/a \ \ \ \ \ dav_ext_methods PROFIND OPTIONS;' /etc/nginx/conf.d/default.conf;
+        #         # sed -i '/index.html/a \ \ \ \ \ create_full_put_path on;' /etc/nginx/conf.d/default.conf;
+        #         # sed -i '/index.html/a \ \ \ \ \ dav_access user:rw group:rw all:rw;' /etc/nginx/conf.d/default.conf;
+        #         # sed -i '/index.html/a \ \ \ \ \ try_files $uri $uri/ /index.html;' /etc/nginx/conf.d/default.conf;
+        #         # sed -i '/index.html/a \ \ \ \ \ auth_basic: "Mot de passe :";' /etc/nginx/conf.d/default.conf;
+        #         # sed -i '/index.html/a \ \ \ \ \ auth_basic_user_file "/etc/nginx/passwd/media_pass";' /etc/nginx/conf.d/default.conf;
         ports:
         - containerPort: 80
         volumeMounts:
@@ -41,15 +51,30 @@ spec:
         - name: nginx
           mountPath: /usr/share/nginx/html/Series
           subPath: Series
+        - name: nginx
+          mountPath: /usr/share/nginx/html/Music/
+          subPath: Music
         # - name: nginx
         #   mountPath: /usr/share/nginx/html/Ebooks
         #   subPath: Ebooks
         # - name: nginx
         #   mountPath: /usr/share/nginx/html/Others
         #   subPath: Others
+        - name: current-config
+          # mountPath: /etc/nginx/conf.d
+          mountPath: /etc/nginx/sites-enabled
+        - name: current-secret
+          mountPath: /etc/nginx/htpasswd
+          subPath: htpasswd
       volumes:
       - name: nginx
         glusterfs:
           endpoints: glusterfs-cluster
           path: data
           readOnly: false
+      - name: current-config
+        configMap:
+          name: config.general.nginx
+      - name: current-secret
+        secret:
+          secretName: secret.general.nginx
